<resources>
    <string name="app_name">InstagramCloneApp</string>
    <string name="by_rusen_narinc">Rusen Narinc</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have An Account Login?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reels">Reels</string>
    <string name="user">User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="name_profil">name</string>
    <string name="bio_profil">bio</string>
    <string name="add_post">Add Post</string>
    <string name="add_reel">Add Reel</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="share_to_post">Share To Post</string>
    <string name="your_post_may_be_appear_in_posts_and_can_be_seen_on_the_posts_tab_under_your_profile">Your Post May be appear in Posts and can be seen on the posts tab under your profile</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="select_reel">Select Reel</string>
    <string name="share_to_reel">Share to Reel</string>
    <string name="this_is_my_temp_data_for_video">this is my temp data for video</string>
</resources>