<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Post.ReelsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="New Reel" />

    <Button
        android:id="@+id/iv_select_video"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_reel"
        app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/pink"
        app:layout_constraintEnd_toEndOf="@+id/iv_select_video"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="@+id/iv_select_video"
        app:layout_constraintTop_toBottomOf="@+id/iv_select_video">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_a_caption"
            android:visibility="visible" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caption">

        <ImageView
            android:id="@+id/iv_reel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/reels" />

        <TextView
            android:id="@+id/textPost"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/share_to_reel"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="40dp"
        android:text="@string/your_post_may_be_appear_in_posts_and_can_be_seen_on_the_posts_tab_under_your_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:strokeColor="@color/pink"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray"
            style="@style/Widget.Material3.Button.OutlinedButton"/>

        <Button
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/post"
            android:textColor="@color/white"
            style="@style/Widget.Material3.Button.OutlinedButton"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

